# the-architects-site

./: .gitignore  Anchor.toml  README.md  cnft-ids.json  jest.config.mjs  next.config.js  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json
.husky/: pre-commit
__tests__/: Sainty.test.tsx
__tests__/utils/: currency.ts  dispensers.ts
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.old.tsx  page.tsx
app/dashboard/: page.tsx
app/drive/: page.tsx
app/icons/: architecture-icon.tsx  arrow-up-icon.tsx  check-mark-icon.tsx  data-cylinder-icon.tsx  hard-drive-icon.tsx  image-icon.tsx  sprout-icon.tsx  warning-icon.tsx
app/invite-leaderboard/: page.tsx
app/lab/: page.tsx
app/login/: page.tsx
app/loot-box-old/: page.tsx
constants/: constants.tsx
docs/: index.md
features/: basic-shadow-upload.tsx  overlay.tsx  shadow-upload.tsx
hooks/: admin.tsx  cluster.tsx  countdown.tsx  debug-mode.tsx  sidebar.tsx  upload-file.tsx  user.tsx
idl/: dispenser.json
programs/dispenser/: Cargo.toml
programs/dispenser/src/: lib.rs
providers/: auto-connect-provider.tsx  context-provider.tsx
scripts/: fill-dispenser.ts  transfer.ts
styles/: global.css
tests/: architects.ts
utils/: clipboard.ts  currency.ts  date-time.ts  drive.ts  encryption.ts  files.ts  formatting.ts  get-signature-from-one-time-token.ts  hashing.ts  images.ts  log-error.ts  portals-sdk-v2.js  rpc.ts  send-blueprint-request.ts  shadow-upload.tsx  umi.ts  user.ts
wrappers/: react-json-view.tsx
(+503 files in other folders)
