[package]
name = "dispenser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dispenser"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["anchor-spl"]

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { version = "0.28.0", optional = true }

